2011-02-09 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Followup-to: #17242: Possibility to disable some tabs / consistent naming and manual update

2011-01-25 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16811: The pageTS config of templavoila. is not merged with userTS config 
	* Fixed bug: #17234: Copying an FCE into another place doesn't show them initially, this might confuse users
	* Fixed bug: #17005: Adjust TCA setup for pages and tt_content to new 4.5 "style" 

2011-01-24 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16979: TemplaVoila 1.5.3 wizard error in src-4.4.6 site. (Thanks to Jonathan Krusy and Bodo Frommelt)
	* Fixed bug: #17242: Possibility to disable some tabs (and to reorder them) (Thanks to Benjamin Mack)

2011-01-23 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16886: Include Header parts - comments hack bug 

2010-12-20 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16791: language flag might indicate wrong visibility in workspaces (Thanks to Nikola Stojiljkovic)

2010-12-17 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16700: mod2 broken in 1.5.3 when TOs are used / incorrect parameters for t3lib_div::array2xml (Thanks to Andreas Kiessling)

2010-12-05 Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16684: useless visual expansion of the nested section datapreview 
	* Fixed bug: #13822: Cut and paste in workspaces
	* Fixed bug: #11359: When deleting versions of a CE record, page looses reference to the complete record 
	* Fixed bug: #16521: Localize FCEs from the page module (Thanks to Andreas Kiessling)

2010-11-28  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #16587: small typo - dataprot variable misspelled (Thanks to Andreas Lappe)

2010-11-27  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: Fixed bug: #15927: Remove icon »Create new element« if user has no rights to edit the pages content